Fix update of "read-only" state of the document when loading and saving

We shouldn't set the status of the actions explicitly from the
document, since it created thread-safety issues on MacOS
(and just doesn't work, since the enabled state is managed by
KisActionManager)

BUG:487544