libs/ui/kis_action.h
@@ -59,6 +59,7 @@ public:
         SHAPE_SELECTION_WITH_SHAPES = 0x10000, ///< Activate there is a vector selection active
         PIXEL_SELECTION_WITH_PIXELS = 0x20000, ///< Activate there is a raster selection active
         IMAGE_CAN_RESELECT          = 0x40000, ///< Activate there is a deselected selection in the image
+        IMAGE_IS_WRITABLE           = 0x80000, ///< Activate KisDocument::isReadWrite() is active
     };
     Q_DECLARE_FLAGS(ActivationFlags, ActivationFlag)
 
